force-app/main/default/objects/PWChrono_Performance_Cycle__c/PWChrono_Performance_Cycle__c.object-meta.xml
<CustomObject>
    <description
  >Configuration for Performance Review Cycles (Quarterly, Annual)</description>
    <label>Performance Cycle</label>
    <nameField>
        <label>Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>