force-app/main/default/objects/PWChrono_Performance_Cycle__c/fields/Minimum_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Tenure_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Minimum number of months an employee must be active to be eligible for this review cycle.</inlineHelpText>
    <label>Minimum Tenure (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>