force-app/main/default/objects/PWChrono_Performance_Cycle__c/fields/Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Day__c</fullName>
    <label>Start Day</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>