force-app/main/default/objects/PWChrono_Performance_Cycle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Cycle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Review</fullName>
            </value>
            <value>
                <fullName>Annual Appraisal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>