force-app/main/default/objects/PWChrono_Performance_Cycle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Start_Day__c</columns>
    <columns>End_Day__c</columns>
    <columns>Start_Month__c</columns>
    <columns>End_Month__c</columns>
    <columns>Minimum_Tenure_Months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>